--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "bun run --filter '*' build",
     "test": "bun test",
     "test:integration": "bun test packages/openstoat-cli/test/integration.test.ts",
-    "link:global": "bun run build && cd packages/openstoat-cli && npm link"
+    "link:global": "sh -c 'bun run build && cd packages/openstoat-cli && rm -f \"$(npm root -g)/../../bin/openstoat\" && npm link'"
   },
   "devDependencies": {
     "@types/bun": "latest",
