feat: add openstoat-web package and web command to CLI
- Add openstoat-web package with server, routes, and HTML generation
- Add web command to CLI for launching web UI
- Update handoff and CLI index

Made-with: Cursor

--- a/packages/openstoat-cli/package.json
+++ b/packages/openstoat-cli/package.json
@@ -12,6 +12,7 @@
     "@openstoat/core": "workspace:*",
     "@openstoat/daemon": "workspace:*",
     "@openstoat/types": "workspace:*",
+    "@openstoat/web": "workspace:*",
     "yargs": "^17.7.2"
   },
   "devDependencies": {
