feat: add openstoat-skills package and enhance CLI commands
- Introduce openstoat-skills package to the workspace.
- Update dependencies in openstoat-cli to include openstoat-skills.
- Add new install command to CLI for managing skills.
- Enhance daemon command to install skills during startup.
- Update .gitignore to exclude new agent directories.

Made-with: Cursor

--- a/packages/openstoat-cli/package.json
+++ b/packages/openstoat-cli/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "openstoat-core": "workspace:*",
     "openstoat-daemon": "workspace:*",
+    "openstoat-skills": "workspace:*",
     "openstoat-types": "workspace:*",
     "yargs": "^17.7.2"
   },
