--- a/packages/openstoat-cli/package.json
+++ b/packages/openstoat-cli/package.json
@@ -14,6 +14,7 @@
     "openstoat-daemon": "workspace:*",
     "openstoat-skills": "workspace:*",
     "openstoat-types": "workspace:*",
+    "openstoat-web": "workspace:*",
     "yargs": "^17.7.2"
   },
   "devDependencies": {
