--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "workspaces": ["packages/*"],
   "scripts": {
-    "build": "cd packages/openstoat-types && bun run build && cd ../openstoat-core && bun run build && cd ../openstoat-daemon && bun run build && cd ../openstoat-cli && bun run build && cd ../openstoat-web && bun run build",
+    "build": "cd packages/openstoat-types && bun run build && cd ../openstoat-core && bun run build && cd ../openstoat-daemon && bun run build && cd ../openstoat-web && bun run build && cd ../openstoat-cli && bun run build",
     "test": "bun test",
     "test:integration": "bun test tests/integration",
     "openstoat": "bun run packages/openstoat-cli/dist/index.js",
