feat(daemon): add agent_args_template for flexible agent CLI interfaces
- Add agent_args_template config option to .openstoat.json
- Use {{prompt}} placeholder; default keeps positional arg behavior
- Examples: --prompt {{prompt}}, -m {{prompt}} for different agents
- Bump all packages to 0.2.0

Made-with: Cursor

--- a/openstoat.json.example
+++ b/openstoat.json.example
@@ -1,4 +1,5 @@
 {
   "project": "<project_id>",
-  "agent": "/path/to/your/agent-executable"
+  "agent": "/path/to/your/agent-executable",
+  "agent_args_template": "{{prompt}}"
 }
