--- a/packages/openstoat-cli/package.json
+++ b/packages/openstoat-cli/package.json
@@ -1,6 +1,7 @@
 {
   "name": "openstoat",
-  "version": "0.2.0",
+  "version": "0.2.1",
+  "description": "AI and Human task queue - orchestrate work between AI agents and humans with a local-first CLI",
   "bin": {
     "openstoat": "./bin/openstoat"
   },
