--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -30,6 +30,25 @@ jobs:
       - name: Install dependencies
         run: bun install --frozen-lockfile
 
+      - name: Set version from tag
+        run: |
+          VERSION=${{ github.ref_name }}
+          VERSION=${VERSION#v}
+          echo "Setting all packages to version $VERSION"
+          for pkg in palmlist-types palmlist-core palmlist-daemon palmlist-skills palmlist-web palmlist-cli; do
+            node -e "
+              const fs = require('fs');
+              const pkg = process.argv[1];
+              const version = process.argv[2];
+              const path = 'packages/' + pkg + '/package.json';
+              const p = JSON.parse(fs.readFileSync(path, 'utf8'));
+              p.version = version;
+              fs.writeFileSync(path, JSON.stringify(p, null, 2) + '\n');
+            " "$pkg" "$VERSION"
+          done
+          echo "Versions updated. Running bun install to update lockfile..."
+          bun install
+
       - name: Build
         run: bun run build
 
