fix: convert workspace:* to semver before npm publish
palmlist (CLI) publish may fail when dependencies use workspace:*
protocol. Convert to ^version so published package has valid registry deps.

Made-with: Cursor

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -52,6 +52,29 @@ jobs:
       - name: Build
         run: bun run build
 
+      - name: Convert workspace:* to semver for publish
+        run: |
+          VERSION=${{ github.ref_name }}
+          VERSION=${VERSION#v}
+          echo "Converting workspace:* to ^$VERSION in package.json dependencies"
+          for pkg in palmlist-types palmlist-core palmlist-daemon palmlist-skills palmlist-web palmlist-cli; do
+            node -e "
+              const fs = require('fs');
+              const pkg = process.argv[1];
+              const version = process.argv[2];
+              const path = 'packages/' + pkg + '/package.json';
+              const p = JSON.parse(fs.readFileSync(path, 'utf8'));
+              for (const key of ['dependencies', 'peerDependencies']) {
+                if (p[key]) for (const dep of Object.keys(p[key])) {
+                  if (dep.startsWith('palmlist-') && p[key][dep] === 'workspace:*') {
+                    p[key][dep] = '^' + version;
+                  }
+                }
+              }
+              fs.writeFileSync(path, JSON.stringify(p, null, 2) + '\n');
+            " "$pkg" "$VERSION"
+          done
+
       - name: Publish packages to npm
         run: |
           # Publish in dependency order (types -> core -> daemon -> skills -> web -> cli)
