--- a/packages/palmlist-cli/package.json
+++ b/packages/palmlist-cli/package.json
@@ -2,26 +2,30 @@
   "name": "palmlist",
   "version": "0.2.5",
   "description": "AI and Human task queue - orchestrate work between AI agents and humans with a local-first CLI",
-  "bin": {
-    "palmlist": "./bin/palmlist"
-  },
+  "type": "module",
+  "bin": { "palmlist": "./bin/palmlist" },
   "scripts": {
-    "build": "tsc",
-    "clean": "rm -rf dist",
+    "build": "node build.mjs",
+    "clean": "rm -rf dist skills",
     "start": "bun run src/index.ts"
   },
   "dependencies": {
-    "palmlist-core": "workspace:*",
-    "palmlist-daemon": "workspace:*",
-    "palmlist-skills": "workspace:*",
-    "palmlist-types": "workspace:*",
-    "palmlist-web": "workspace:*",
     "yargs": "^17.7.2"
   },
   "devDependencies": {
     "@types/bun": "latest",
     "@types/node": "^20.0.0",
     "@types/yargs": "^17.0.35",
+    "esbuild": "^0.27.0",
+    "palmlist-core": "workspace:*",
+    "palmlist-daemon": "workspace:*",
+    "palmlist-skills": "workspace:*",
+    "palmlist-types": "workspace:*",
+    "palmlist-web": "workspace:*",
     "typescript": "^5.0.0"
+  },
+  "files": ["bin", "dist", "skills"],
+  "engines": {
+    "bun": ">=1.0"
   }
 }
