fix: use scoped package @palmlist/palmlist (npm rejects palmlist as similar to yallist)
Made-with: Cursor

--- a/packages/palmlist-cli/package.json
+++ b/packages/palmlist-cli/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "palmlist",
+  "name": "@palmlist/palmlist",
   "version": "0.2.5",
   "description": "AI and Human task queue - orchestrate work between AI agents and humans with a local-first CLI",
   "type": "module",
