--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -45,7 +45,7 @@ jobs:
       - name: Build
         run: bun run build
 
-      - name: Publish palmlist to npm
+      - name: Publish @palmlist/palmlist to npm
         run: cd packages/palmlist-cli && npm publish --access public
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
