--- a/packages/openstoat-cli/package.json
+++ b/packages/openstoat-cli/package.json
@@ -1,27 +1,31 @@
 {
   "name": "openstoat",
-  "version": "0.2.4",
+  "version": "0.3.0",
   "description": "AI and Human task queue - orchestrate work between AI agents and humans with a local-first CLI",
-  "bin": {
-    "openstoat": "./bin/openstoat"
-  },
+  "type": "module",
+  "bin": { "openstoat": "./bin/openstoat" },
   "scripts": {
-    "build": "tsc",
-    "clean": "rm -rf dist",
+    "build": "node build.mjs",
+    "clean": "rm -rf dist skills",
     "start": "bun run src/index.ts"
   },
   "dependencies": {
-    "openstoat-core": "workspace:*",
-    "openstoat-daemon": "workspace:*",
-    "openstoat-skills": "workspace:*",
-    "openstoat-types": "workspace:*",
-    "openstoat-web": "workspace:*",
     "yargs": "^17.7.2"
   },
   "devDependencies": {
     "@types/bun": "latest",
     "@types/node": "^20.0.0",
     "@types/yargs": "^17.0.35",
+    "esbuild": "^0.27.0",
+    "openstoat-core": "workspace:*",
+    "openstoat-daemon": "workspace:*",
+    "openstoat-skills": "workspace:*",
+    "openstoat-types": "workspace:*",
+    "openstoat-web": "workspace:*",
     "typescript": "^5.0.0"
+  },
+  "files": ["bin", "dist", "skills"],
+  "engines": {
+    "bun": ">=1.0"
   }
 }
