feat(openstoat-openclaw-plugin): enhance configuration and registration structure
- Added new configuration options for future API integration, including apiBaseUrl, apiToken, and defaultPriority.
- Updated the plugin's index.ts to improve the registration process by modularizing tool, command, service, and hook registrations.
- Introduced a test script in package.json for better development workflow.

Made-with: Cursor

--- a/packages/openstoat-openclaw-plugin/package.json
+++ b/packages/openstoat-openclaw-plugin/package.json
@@ -10,7 +10,8 @@
   },
   "scripts": {
     "build": "tsc",
-    "clean": "rm -rf dist"
+    "clean": "rm -rf dist",
+    "test": "bun test"
   },
   "dependencies": {},
   "devDependencies": {
