--- a/packages/openstoat-openclaw-plugin/package.json
+++ b/packages/openstoat-openclaw-plugin/package.json
@@ -6,7 +6,7 @@
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "openclaw": {
-    "extensions": ["./dist/index.js"]
+    "extensions": ["dist/index.js"]
   },
   "scripts": {
     "build": "tsc",
